[gd_scene load_steps=4 format=3 uid="uid://bjpaxenrqk8d4"]

[ext_resource type="Texture2D" uid="uid://bs82jui0f6sum" path="res://assets/deck.svg" id="1_nnhtc"]
[ext_resource type="Script" path="res://scripts/singe_scripts/card.gd" id="2_motso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nukj7"]
size = Vector2(141, 320)

[node name="card" type="Sprite2D"]
texture = ExtResource("1_nnhtc")
hframes = 14
vframes = 8
region_rect = Rect2(0, 0, 3362, 2890)
script = ExtResource("2_motso")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 1)
shape = SubResource("RectangleShape2D_nukj7")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
